--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser": "~9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
+    "@asymmetrik/ngx-leaflet": "^7.0.1",
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
+    "leaflet": "^1.7.1",
     "rxjs": "~6.6.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
